# sheldonhull.hugo

./: .bhugo  .code-config  .envrc  .gitignore  .gitleaks.toml  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .golangci.yml  .htmltest.yml  .linky-note.yml  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .tool-versions  .yamllint.yaml  .yarnrc  100daysofcode.toml  2019-03-28-infrastructure-as-code.json  2019-03-28-terraform-for-dummies.json  2019-04-13-generating-diagrams-programmatically.json  2019-04-16-the-importance-of-good-acceptance-criteria-in-devops.json  2019-04-17-2331.json  2021-01-07-go-R1-day-24.md  Caddyfile  Caddyfile.dockercompose  Dockerfile.hugo  GitVersion.yml  LICENSE.md  README.md  RequiredModules.psd1  Taskfile.yml  _webmentions.js_  algolia.json  aqua.ci.yaml  aqua.yaml  build.ps1  commit_convention.yml  (+34 more)
.aqua/: aqua-policy.yaml  aqua.yaml  registry.yaml
.dagger/: go.mod  main.go
.devcontainer/: .tool-versions  Dockerfile  devcontainer.json  hugo-specific.Dockerfile  install-asdf.sh  install-git-town.sh  install-gitversion.sh  mkdocs.Dockerfile
.devtools/: tools.go
.forestry/: index.html  settings.yml
.github/: .auto_assign_issues.yml  agent.instructions.md  auto_assign.yml  copilot-instructions.md  issue-rules.yml  markdown.instructions.md  quartz.instructions.md  stale.yml
.github-inactive/: atomic-algolia-update.yml
diagrams/: 2021-06-28-1615-security-steps.excalidraw  diagram.aws-pull-request.py  diagram.py  diagram.with-helper.py  pyproject.toml  sql-logins-databases.excalidraw
(+2956 files in other folders)
