[tool.poetry]
name = "diagramming"
version = "0.1.0"
description = "Diagrams for blog posts"
authors = ["Sheldon Hull <sheldonhull@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.12.4"
diagrams = "0.23.4"

#[tool.poetry.dev-dependencies]
#pytest = "^6.2.3"
#black = "^21.4b2"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
